--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,10 @@ POSTGRES_DB=postgres
 APP_PORT=8000
 APP_WORKERS=4
 
+RABBITMQ_HOST=rabbit_mq
+RABBITMQ_PORT=5672
 RABBITMQ_USER=rabbit
 RABBITMQ_PASS=1234
-RABBITMQ_PORT=5672
 RABBITMQ_MANAGEMENT_PORT=15672
 
 TRANSACTIONS_QUEUE=transactions
